hard-gists/48c5c0124ba4e162b2e3/run.log
=== Docker Run Log for 48c5c0124ba4e162b2e3 ===
Started at: Mi 29. Okt 15:03:20 CET 2025

[2025-10-29 15:03:20] START: Running container for 48c5c0124ba4e162b2e3
[2025-10-29 15:03:21] SUCCESS: Container 4b546d29159ccdfd3b32a3a1110daaca88d4c9dcd49c14583653be8e8d266cbf started for 48c5c0124ba4e162b2e3
=== Container logs for 48c5c0124ba4e162b2e3 ===
  File "/snippet.py", line 83
    print x
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 48c5c0124ba4e162b2e3 ===
[2025-10-29 15:03:23] INFO: Container 4b546d29159ccdfd3b32a3a1110daaca88d4c9dcd49c14583653be8e8d266cbf has stopped
